--- a/GastosExcel/InterfaceGastos/WebContent/Index.xhtml
+++ b/GastosExcel/InterfaceGastos/WebContent/Index.xhtml
@@ -6,15 +6,9 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<ui:composition template="">
-	<ui:define name="header">
-	    Add your header here or delete to use the default
-	</ui:define>
-	<ui:define name="content">
-	    Add your content here or delete to use the default
-	</ui:define>
-	<ui:define name="footer">
-	    Add your footer here or delete to use the default
-	</ui:define>
+<ui:composition template="_padrao.xhtml">
+<ui:define name="conteudo">
+<h1>Pão de alho</h1>
+</ui:define>
 </ui:composition>
 </html>
