--- a/GastosExcel/InterfaceGastos/WebContent/_padrao.xhtml
+++ b/GastosExcel/InterfaceGastos/WebContent/_padrao.xhtml
@@ -6,16 +6,18 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+<h:outputStylesheet library="css" name="bootstrap.min.css"/>
 
-<h:head>
-	<title><ui:insert name="head">Head</ui:insert></title>
-	<h:outputStylesheet library="css" name="bootstrap.min.css"/>
-</h:head>
+	<h:head>
+		<title>Head</title>
+		
+		
+	</h:head>
 
 
 
-	<ui:insert name="menu">
-	<h:body>
+<h:body>
+	
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
   		<a class="navbar-brand" href="#">Navbar</a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,13 +55,25 @@
 </nav>
 
 
+		
+<ui:insert name="conteudo">
+
+</ui:insert>	
 
 
-<h:outputScript library="js" name="jquery-3.4.0.min.js"/>
+
+
+	<h:outputScript library="js" name="jquery-3.4.0.min.js"/>
 <h:outputScript library="js" name="bootstrap.min.js"/>
-
+				
 </h:body>
-</ui:insert>
+
+
+
+
+
+
+
 
 
 </html>
