--- a/GastosExcel/InterfaceGastos/WebContent/cadastro.xhtml
+++ b/GastosExcel/InterfaceGastos/WebContent/cadastro.xhtml
@@ -4,14 +4,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+	
 
-<ui:composition template="_menu.xhtml">
-	<ui:define name="head">
+<ui:composition template="_padrao.xhtml">   
+	<ui:define name="conteudo">
+	<div class="container">
+		<h:form>
+			<h:messages id="messages"/>
+			<div class="form-group">
+				<h:outputLabel value="Data do Gasto" for="data" styleClass="col-form-label"/>
+				<p:calendar id="data" value="#{clienteBean.cliente.dataNascimento.time}" />
+			</div>
+		
+		</h:form>
+	</div>	
 	</ui:define>
 	
-	<ui:define name="menu">
-	</ui:define>
+	
 	
 
 
