--- a/GastosExcel/InterfaceGastos/WebContent/cadastro.xhtml
+++ b/GastosExcel/InterfaceGastos/WebContent/cadastro.xhtml
@@ -37,7 +37,7 @@
 			</div >
 			
 			<div class="form-group">
-				<h:outputLabel value="Tipo de descrição" for="local"/>
+				<h:outputLabel value="Local do Gasto" for="local"/>
 				<h:inputText value="#{gastoBean.gasto.localGasto}" id="local" styleClass="form-control"/>
 			</div>
 			
@@ -51,7 +51,7 @@
 			
 			<div class="form-group">
 				<h:outputLabel value="Tipo de Pagamento" for="pagamento"/>
-				<h:selectOneRadio id="pagamento" value="#{gastoBean.gasto.tipopagamneto}">
+				<h:selectOneRadio id="pagamento" value="#{gastoBean.gasto.tipoPagamento}">
 					<f:selectItems value="#{gastoBean.getTipoPagamento()}"
 						var="p"
 						itemLabel="#{p.desc}"
