continua,fazer o filtro da listagem,a tela de atualização e remoção e por gráficos

--- a/GastosExcel/InterfaceGastos/WebContent/listagem.xhtml
+++ b/GastosExcel/InterfaceGastos/WebContent/listagem.xhtml
@@ -12,6 +12,14 @@
 	
 	<ui:define name="conteudo">
 		<div class="container">	
+			<div class="form-group">
+				<h:selectOneMenu>
+				
+				
+				</h:selectOneMenu>
+			
+			</div>
+		
 			<h1>Gastos Realizados</h1>
 			<p:dataTable value="#{gastoBean.listar()}" var="g" paginator="true" rows="5" emptyMessage="Cliente não encontrados"
 						rowsPerPageTemplate="3,6,9">
